--- a/main/templates/about.html
+++ b/main/templates/about.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}{% endblock %}
+{% block title %}Acerca de |{% endblock %}
 
 {% block content %}
 
