--- a/miembros/templates/registration/register.html
+++ b/miembros/templates/registration/register.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}{% endblock %}
+{% block title %}Registrarse |{% endblock %}
 
 
 {% block content %}
@@ -11,10 +11,10 @@
 
     <!-- Sign up form -->
     <section class="signup">
-        <div class="container">
+        <div class="containerr">
             <div class="signup-content">
                 <div class="signup-form">
-                    <h2 class="form-title">Sign up</h2>
+                    <h2 class="form-title">Registrarse</h2>
                     <form method="POST" class="register-form" id="register-form">
                         {% csrf_token %}
                         <div class="form-group">
@@ -54,7 +54,7 @@
                 </div>
                 <div class="signup-image">
                     <figure><img src="{% static 'img/logo.png' %}" class="logo" alt=""></figure>
-                    <a href="#" class="signup-image-link">I am already member</a>
+                    <a href="{% url 'login' %}" class="signup-image-link">Ya soy un miembro</a>
                 </div>
             </div>
         </div>
