--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -127,11 +127,7 @@
           &copy; Copyright <strong><span>Amada Mascota</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/presento-bootstrap-corporate-template/ -->
-          Designed by <a href="https://bootstrapmade.com/">Zoe, Enzo, Franco, Mimi, Magui, David</a>
+          Designed by <a href="{% url 'about' %}#team">Zoe, Enzo, Franco, Mimi, Magui, David</a>
         </div>
       </div>
       <div class="social-links text-center text-md-end pt-3 pt-md-0">
