--- a/miembros/templates/registration/register.html
+++ b/miembros/templates/registration/register.html
@@ -11,10 +11,10 @@
 
     <!-- Sign up form -->
     <section class="signup">
-        <div class="containerr">
-            <div class="signup-content">
+        <div class="containerr w-100 p-2">
+            <div class="signup-content" style="padding-top: 1em;">
                 <div class="signup-form">
-                    <h2 class="form-title">Registrarse</h2>
+                    <h2 class="form-title" >Registrarse</h2>
                     <form method="POST" class="register-form" id="register-form">
                         {% csrf_token %}
                         <div class="form-group">
@@ -53,8 +53,8 @@
                     </form>
                 </div>
                 <div class="signup-image">
-                    <figure><img src="{% static 'img/logo.png' %}" class="logo" alt=""></figure>
-                    <a href="{% url 'login' %}" class="signup-image-link">Ya soy un miembro</a>
+                    <figure class="d-none d-md-block"><img src="{% static 'img/logo.png' %}" class="logo" alt=""></figure>
+                    <a href="{% url 'login' %}" class="signup-image-link" >Ya soy un miembro</a>
                 </div>
             </div>
         </div>
