--- a/main/templates/about.html
+++ b/main/templates/about.html
@@ -150,17 +150,15 @@
             <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="member-img">
-                  <img src="{% static 'img/team/team-1.jpg' %}" class="img-fluid" alt="">
+                  <img src="{% static 'img/team/enzo.png' %}" class="img-fluid" alt="">
                   <div class="social">
-                    <a href=""><i class="bi bi-twitter"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
+                    <a href="https://github.com/enzostefani507"><i class="bi bi-github"></i></a>
+                    <a href="https://www.instagram.com/benites123/"><i class="bi bi-instagram"></i></a>
                   </div>
                 </div>
                 <div class="member-info">
                   <h4>Enzo Stefani</h4>
-                  <span>Database manager</span>
+                  <span>Estudiante de Ing. en sistemas de informacion en <a href="https://www.frre.utn.edu.ar/">UTN FRRe </a>y de programacion en <a href="https://chaco.gov.ar/informatorio/">Informatorio</a></span>
                 </div>
               </div>
             </div>
