--- a/miembros/templates/registration/login.html
+++ b/miembros/templates/registration/login.html
@@ -8,19 +8,19 @@
 
 <link href="{% static 'css/login.css' %}" rel="stylesheet">
 
-<div class="main">
+<div class="main" style="padding-top: 3em;padding-bottom: 0px;">
 
     <!-- Sing in  Form -->
-    <section class="sign-in" ">
+    <section class="sign-in" style="padding-bottom: 2em; padding-left: 2em; padding-right: 2em;margin-bottom: 0px;" >
         <div class="containerr w-100 p-4 " >
-            <div class="signin-content" style="padding-top: 1em;">
+            <div class="signin-content" style="padding-top: 1em;padding-bottom: 1em;">
                 <div class="signin-image ">
                     <figure class="d-none d-md-block"><img src="{% static 'img/logo.png' %}" class="logo" alt=""></figure>
                     <a href="{% url 'register' %}" class="signup-image-link">Registrarse</a>
                 </div>
 
                 <div class="signin-form ">
-                    <h2 class="form-title">Login</h2>
+                    <h2 class="form-title">Iniciar</h2>
                     <form method="POST" class="register-form" id="login-form">
                         {% csrf_token %}
                         <div class="form-group ">
@@ -35,7 +35,7 @@
                         </div>
                         <div class="form-group">
                             <input type="checkbox" name="remember-me" id="remember-me" class="agree-term" />
-                            <label for="remember-me" class="label-agree-term"><span><span></span></span>Remember me</label>
+                            <label for="remember-me" class="label-agree-term"><span><span></span></span>Recuérdame</label>
                         </div>
                         <div class="form-group form-button">
                             <input type="submit" name="signin" id="signin" class="form-submit" value="Log in"/>
