Arreglado login y otras cosas

--- a/main/templates/about.html
+++ b/main/templates/about.html
@@ -142,7 +142,7 @@
                 </div>
                 <div class="member-info">
                   <h4>Zoe Sobol</h4>
-                  <span>Front End Developer</span>
+                  <span>Full Stack Web Developer. Estudiante de <a href="https://www.digitalhouse.com/ar/beca/certifiedtechdeveloper">Certified Tech Developer</a> y de <a href="https://chaco.gov.ar/informatorio/">Informatorio</a> </span>
                 </div>
               </div>
             </div>
