--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2132,4 +2132,10 @@ section {
   background: #e53e6a;
   color: #fff;
   text-decoration: none;
+  
+}
+
+#footer .copyright {
+  padding-top: 5px;
+  font-size: 13px;
 }
