--- a/apps/encontrados/templates/lista_encontrados.html
+++ b/apps/encontrados/templates/lista_encontrados.html
@@ -9,14 +9,15 @@
    <input type="submit" value="Buscar">
 </div>
 <section>
-<h5>En casa</h5>
-{% for publicacion in publicaciones %}
+   <h5>En casa</h5>
+   {% for publicacion in publicaciones %}
    <div>
       <div>{{ publicacion.mascota.fotos }}</div>
       <h6>{{ publicacion.mascota.nombre }}</h6>
       <span>{{ publicacion.fecha_publicacion }}</span>
       <span>{{ publicacion.mascota.raza }}</span>
       <span>{{ publicacion.mascota.sexo }}</span>
+      <a href="{% url 'editar_publicacion' publicacion.id_publicacion %}"></a>
    </div>
    {% endfor %}
 </section>
