--- a/apps/encontrados/templates/publicar.html
+++ b/apps/encontrados/templates/publicar.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-{% if user.is_authenticated %}
+{% if request.user.is_authenticated %}
    <section>
       <h5>Editando <strong>{{ mascota.nombre }}</strong></h5>
       <form action="" method="GET">
