--- a/apps/encontrados/templates/publicar.html
+++ b/apps/encontrados/templates/publicar.html
@@ -1,18 +1,18 @@
 {% extends 'base.html' %}
 
-{% block title %} | Encontrados {% endblock %}
+{% block title %} | Editar {% endblock %}
 
 {% block content %}
 
-{% if request.user.is_authenticated %}
+{% if user.is_authenticated %}
    <section>
-      <h5>Editando <strong>{{ mascota.nombre }}</strong></h5>
       <form action="" method="GET">
          {% csrf_token %}
          {{ publicacion.as_p }}
          {{ mascota.as_p }}
          {{ ubicacion.as_p }}
-         <input type="submit" value="Publicar">
+         {{ encontro.as_p }}
+         <input type="submit" value="Guardar">
       </form>
    </section>
 {% endif %}
