--- a/apps/encontrados/templates/resultado_busqueda.html
+++ b/apps/encontrados/templates/resultado_busqueda.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+<!-- {% extends 'base.html' %}
 
 {% block title %} | Encontrados {% endblock %}
 
@@ -25,4 +25,4 @@
    {% endfor %}
 </section>
 
-{% endblock %}
+{% endblock %} -->
