--- a/apps/encontrados/templates/publicar.html
+++ b/apps/encontrados/templates/publicar.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-{% if user.is_authenticated %}
+<!-- {% if user.is_authenticated %} -->
    <section>
       <form action="" method="GET">
          {% csrf_token %}
