--- a/main/templates/about.html
+++ b/main/templates/about.html
@@ -176,7 +176,7 @@
                 </div>
                 <div class="member-info">
                   <h4>Noemí Cicka</h4>
-                  <span>Chief Executive Officer</span>
+                  <span>Estudiante de programación en <a href="https://chaco.gov.ar/informatorio/">Informatorio</span>
                 </div>
               </div>
             </div>
