readme pdf, foto, admin

--- a/main/templates/about.html
+++ b/main/templates/about.html
@@ -201,17 +201,19 @@
             <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
               <div class="member" data-aos="fade-up" data-aos-delay="300">
                 <div class="member-img">
-                  <img src="{% static 'img/team/team-4.jpg' %}" class="img-fluid" alt="">
+                  <img src="{% static 'img/team/magdalena_brollo.jpg' %}" width="300" height="200" class="img-fluid" alt="" >
                   <div class="social">
-                    <a href=""><i class="bi bi-twitter"></i></a>
                     <a href=""><i class="bi bi-facebook"></i></a>
                     <a href=""><i class="bi bi-instagram"></i></a>
                     <a href=""><i class="bi bi-linkedin"></i></a>
                   </div>
                 </div>
                 <div class="member-info">
-                  <h4>Magui Brollo</h4>
-                  <span>CTO</span>
+                  <h4>Magdalena Brollo</h4>
+                  <span>
+                    Profesora en Informática y en Matemática. Estoy realizando una capcitaci&oacute;n sobre Formaci&oacute;n Intensiva en Programaci&oacute;n, brindada por <a href="https://chaco.gov.ar/informatorio/">Informatorio Chaco.</a> <br>    
+                    Hobby: fotograf&iacute;a, y filmaci&oacute;n en la empresa familiar.
+                  </span>
                 </div>
               </div>
             </div>
