--- a/apps/adopcion/templates/index.html
+++ b/apps/adopcion/templates/index.html
@@ -3,13 +3,45 @@
 {% block title %} Adopciones{% endblock %}
 
 {% block content %}
-<div class="main" style="padding-top: 3em;padding-bottom: 0px;">
-    <section class="sign-in" style="padding-bottom: 2em; padding-left: 2em; padding-right: 2em;margin-bottom: 0px;" >
-        <div class="containerr w-100 p-4 " >
-            <div class="signin-content" style="padding-top: 1em;padding-bottom: 1em;">
-                <p>hola</p>
+    <section id="pricing" class="pricing section-bg">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>Adopciones</h2>
+          <p>Aquí podras encontrar gente que da en adopcion mascota, pero tambien puedes dar en adopcion algunas de las tuyas.</p>
+        </div>
+
+        <div class="row">
+
+          <div class="col-lg-4 col-md-6 ">
+            <div class="box featured" data-aos="fade-up" data-aos-delay="100">
+              <h3>Buscar</h3>
+              <div class="btn-wrap">
+                <a href="crear_adopcion.html" class="btn-buy">Buscar</a>
+              </div>
             </div>
         </div>
+
+          <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
+            <div class="box featured" data-aos="fade-up" data-aos-delay="200">
+              <h3>Crear </h3>
+              <div class="btn-wrap">
+                <a href="buscar_adopcion.html" class="btn-buy">Postear</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-12 mt-4 mt-lg-0">
+            <div class="box featured" data-aos="fade-up" data-aos-delay="300">
+              <h3>Mis Adopciones</h3>
+              <div class="btn-wrap">
+                <a href="historial_adopciones.html" class="btn-buy">Ver historial</a>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
     </section>
-</div>
 {% endblock %}
