--- a/apps/adopcion/templates/historial_adopciones.html
+++ b/apps/adopcion/templates/historial_adopciones.html
@@ -8,6 +8,7 @@
         <div class="containerr w-100 p-4 " >
             <div class="signin-content" style="padding-top: 1em;padding-bottom: 1em;">
                 <tbody>
+                    <!-- ESTO ESTA DE FORMA PROVISIONAL PARA PROBAR-->
                     {% for i in adopciones_lista %}
                     <tr>
                         <td>{{ i.id }}</td>
