Estilos en lista de encontrados, section y aside

--- a/apps/encontrados/templates/publicar.html
+++ b/apps/encontrados/templates/publicar.html
@@ -16,7 +16,9 @@
                {{ ubicacion.as_p }}
                <!-- {{ publicacion.as_p }} -->
                {{ encontro.as_p }}
-               <button type="submit" class="form-control">Guardar</button>
+               <div style="display: flex; justify-content: center;">
+                  <button type="submit" class="btn get-started-btn">Guardar</button>
+               </div>
             </form>  
          </div>
       </div>
