Mejoras en Admin DJ. Add opcion Consultas, con subopciones

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -53,6 +53,7 @@
         <nav id="navbar" class="navbar order-last order-lg-0">
           <ul>
             <li><a class="nav-link scrollto" href="{% url 'home' %}">Home</a></li>
+            <li><a href="{% url 'consultas' %}">Consultas</a></li>
             <li><a href="#">Perdidos</a></li>
             <li><a href="{% url 'encontrados:lista_encontrados' %}">Encontrados</a></li>
             <li><a class="nav-link scrollto" href="{% url 'about' %}">Acerca de</a></li>
