--- a/apps/encontrados/templates/publicar.html
+++ b/apps/encontrados/templates/publicar.html
@@ -9,15 +9,17 @@
       <br>
       <br>
       <h5 style="text-align: left; font: 900 32px bold;padding: 0.5em 0; padding-left: 2em; background-color: #1b1b1b; color: #fff; margin: 0;">Publicar</h5>
+      <div style="text-align: center; background-color: #1b1b1b; color: #fff; min-height: 50px;  padding: 0;">
+         ¡Nosotros te ayudamos a encontrar a su familia!
+      </div>
       <div class="container" style="width: 50%;">
          <div class="abs-center">
             <form method="POST" class="p-3 form abs-center" enctype="multipart/form-data">
                {% csrf_token %}
                {{ mascota.as_p }}
                {{ ubicacion.as_p }}
-               <!-- {{ publicacion.as_p }} -->
                {{ encontro.as_p }}
-               <div style="display: flex; justify-content: center;">
+               <div style="display: flex; justify-content: center; gap: 5px">
                   <a href="{% url 'encontrados:lista_encontrados' %}" class="btn btn-dark">Cancelar</a>
                   <button type="submit" class="btn get-started-btn">Publicar</button>
                </div>
