--- a/apps/encontrados/templates/publicacion.html
+++ b/apps/encontrados/templates/publicacion.html
@@ -3,6 +3,12 @@
 {% block title %}{% endblock %}
 
 {% block content %}
-
+<br>
+<br>
+<br>
+<br>
+<h1>{{ publicacion.id_mascota.nombre }}</h1>
+<h1>{{ publicacion.id_mascota.raza }}</h1>
+<h1>{{ publicacion.id_mascota.especie }}</h1>
 
 {% endblock %}
